Images and texts added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Info Share</title>
@@ -19,17 +19,20 @@
 </header>
 <main>
     <section>
-        <p>aktualności</p>
+        <h2>Zostań programistą!</h2>
+        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+        <a href="" class="button">Kliknij i sprawdź</a>
     </section>
         <h2>Ostatnie aktualności</h2>
     <article>
         <h3>Każdy artukuł musi mieć tytuł</h3>
-        <p>To jest treść artykułu</p>
+        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
         <a href="" class="button">Czytaj więcej</a>
     </article>
     <article>
         <h3 class="red"> Każdy artukuł musi mieć tytuł</h3>
-        <p>To jest treść artykułu</p>
+        <img src="obrazek.jpg"></img>
+        <p>rem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
         <a href="" class="button">Czytaj więcej</a>
     </article>
     <aside>
@@ -51,21 +54,17 @@
             <a href="#">tag3</a>
         </section>
         <section>
-            <h3>Reklama</h3>
+            <h3>Reklamy</h3>
             <img src="obrazek.jpg"></img>
         </section>
     </aside>
-
-
 </main>
-
 <footer>
     <h3>Newsletter</h3>
-    <p>Prawa autorskie</p>
     <form action="">
         <div>
-            <label>Podaj imię</label>
-            <input type="email" value="" name="" placeholder="podaj email">
+            <label>Podaj email</label>
+            <input type="email" value="" name="" placeholder="wpisz email">
         </div>
         <div>
             <input type="radio" name="group"><label>kobieta</label>
@@ -78,8 +77,7 @@
             <input type="submit" value="zapisz się">
         </div>
     </form>
-
+    <p>Prawa autorskie</p>
 </footer>
-
 </body>
 </html>
