--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <input type="submit" value="zapisz się">
         </div>
     </form>
-    <p>Prawa autorskie zastrzeżone</p>
+    <p>Prawa autorskie</p>
 </footer>
 </body>
 </html>
