--- a/index.html
+++ b/index.html
@@ -1,99 +1,114 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Info Share</title>
-    <link href="normalize.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-</head>
-<body>
-    <div class="menu">
-        <nav>
-    <ul>
-        <li><a href="podstrona.html" title="Strona główna"> Strona główna</a></li>
-        <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
-        <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
-        <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
-    </ul>
-        </nav>
-    </div>
-<div class="logo">
-<img src="images/logo_infoshare.png" >
-</div>
-    <header>
-        <h1>INFOSHARE ACADEMY</h1>
-    </header>
+<html lang="pl" xmlns="http://www.w3.org/1999/html">
+    <head>
+        <meta charset="UTF-8">
+        <title>Info Share</title>
+        <link href="normalize.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+    </head>
 
-<div class="container flex-box">
-    <main class="main">
-
-        <div class="baner">
-        <section>
-            <h2>Zostań programistą!</h2>
-            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-            <a href="" class="button">Kliknij i sprawdź</a>
-        </section>
-        </div>
-        <div class="section">
-                <h2>Ostatnie aktualności</h2>
-            <article>
-                <h3>Każdy artukuł musi mieć tytuł</h3>
-                <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
-                <a href="" class="button">Czytaj więcej</a>
-            </article>
-            <article>
-                <h3 class="red"> Każdy artukuł musi mieć tytuł</h3>
-                <img src="obrazek.jpg"></img>
-                <p>rem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
-                <a href="" class="button">Czytaj więcej</a>
-            </article>
-
-        </div>
-    </main>
-
-    <aside>
-        <section>
-            <h3>Kategorie</h3>
+    <body>
+        <div class="menu">
             <nav>
-                <ul>
-                    <li><a href="podstrona.html" title="Kategoria1"> Kategoria1</a></li>
-                    <li><a href="podstrona.html" title="Kategoria2"> Kategoria2</a></li>
-                  </ul>
-        </nav>
-        </section>
-        <section>
-            <h3>Tagi</h3>
-            <a href="#">tag1</a>
-            <a href="#">tag2</a>
-            <a href="#">tag3</a>
-        </section>
-        <section>
-            <h3>Reklamy</h3>
-            <img src="obrazek.jpg"></img>
-        </section>
-    </aside>
-
-</div>
-
-<footer>
-    <h3>Newsletter</h3>
-    <form action="">
-        <div>
-            <label>Podaj email</label>
-            <input type="email" value="" name="" placeholder="wpisz email">
+                 <ul>
+                    <li><a href="podstrona.html" title="Strona główna"> Strona główna</a></li>
+                    <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
+                    <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
+                    <li><a href="podstrona.html" tittle="Podstrona">Podstrona</a></li>
+                 </ul>
+            </nav>
         </div>
-        <div>
-            <input type="radio" name="group"><label>kobieta</label>
-            <input type="radio" name="group"><label>mężczyzna</label>
+
+        <div class="logo">
+            <img src="images/logo_infoshare.png" >
         </div>
-        <div >
-            <input type="checkbox" name="group1"><label>akceptuj regulamin</label>
+
+        <header>
+            <h1>infoshare academy</h1>
+        </header>
+
+        <div class="container flex-box">
+            <main class="main">
+
+                <div class="baner">
+                    <section>
+                        <h2>Zostań programistą!</h2>
+                        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                        <a href="" class="button">Kliknij i sprawdź</a>
+                    </section>
+                </div>
+
+                <div class="section">
+                        <h2>Ostatnie aktualności</h2>
+
+                    <article>
+                        <h3>Każdy artukuł musi mieć tytuł</h3>
+                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
+                        <a href="" class="button">Czytaj więcej</a>
+                    </article>
+
+                    <article>
+                        <h3 class="red"> Każdy artukuł musi mieć tytuł</h3>
+                        <img src="obrazek.jpg"></img>
+                        <p>rem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</p>
+                        <a href="" class="button">Czytaj więcej</a>
+                    </article>
+
+                </div>
+            </main>
+
+            <aside>
+                <section class="kategorie">
+                    <h3>Kategorie</h3>
+                        <nav>
+                            <ul>
+                                <li><a href="podstrona.html" title="Kategoria1"> Kategoria1</a></li>
+                                <li><a href="podstrona.html" title="Kategoria2"> Kategoria2</a></li>
+                              </ul>
+                        </nav>
+                </section>
+
+                <section>
+                    <h3>Tagi</h3>
+                        <a href="#">tag1</a>
+                        <a href="#">tag2</a>
+                        <a href="#">tag3</a>
+                </section>
+
+                <section>
+                    <h3>Reklamy</h3>
+                    <img src="obrazek.jpg"></img>
+                </section>
+            </aside>
+
+
+         <!--<newsletter>
+                <h3>Newsletter</h3>
+                <form action="">
+                    <div>
+                        <label>Podaj email</label>
+                        <input type="email" value="" name="" placeholder="wpisz email">
                     </div>
-        <div>
-            <input type="submit" value="zapisz się">
+
+                    <div>
+                        <input type="radio" name="group"><label>kobieta</label>
+                        <input type="radio" name="group"><label>mężczyzna</label>
+                    </div>
+
+                    <div >
+                        <input type="checkbox" name="group1"><label>akceptuj regulamin</label>
+                    </div>
+
+                    <div>
+                        <input type="submit" class="button" value="Zapisz się">
+                    </div>
+                </form>
+            </newsletter>-->
         </div>
-    </form>
-    <p>Prawa autorskie</p>
-</footer>
-</body>
+
+
+        <footer>
+                <p>Prawa autorskie</p>
+        </footer>
+    </body>
 </html>
